first-service/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: first-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: first-service
      version: v1
  template:
    metadata:
      labels:
        app: first-service
        version: v1
    spec:
      containers:
        - name: first-service
          image: piomin/first-service
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: first-service
  labels:
    app: first-service
spec:
  type: ClusterIP
  ports:
  - port: 8080
    name: http
  selector:
    app: first-service
